--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,179 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+:root{
+    --lightColor:#fff;
+    --darkColor: #eaeaea;
+    --buttonColor: #000;
+    --borderColor: #d0d0d0;
+    --headingColor: #000;
+    --textColor: #656a6f;
+    --circleColor: #21282f;
+}
+
+.getintouch {
+    background: var(--darkColor);
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.getintouch h2{
+    text-align: center;
+    margin: 30px;
+    font-family: 'Russo One', sans-serif;
+    color: var(--headingColor);
+}
+
+form {
+    /* border: 2px solid coral; */
+    width: 40%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    background: var(--darkColor);
+    border-radius: 5px;
+    font-family: 'Roboto Mono', monospace;
+    border-color: var(--borderColor);
+    color: var(--headingColor);
+}
+
+form label {
+    margin-bottom: 10px;
+}
+
+form input, form select {
+    margin-bottom: 20px;
+    padding: 10px 10px;
+    border: 1px solid grey;
+    border-radius: 2px;
+    background: var(--darkColor);
+    color: var(--headingColor);
+    margin-bottom: 50px;
+}
+
+form textarea {
+    margin-bottom: 30px;
+    background: var(--darkColor);
+}
+
+form input[type="submit"] {
+    margin-bottom: 5px;
+    background: var(--buttonColor);
+    color: #fff;   
+}
+
+.loading {
+    width: 30%;
+    text-align: center;
+    margin: auto;
+    padding: 10px;
+    font-weight: bold;
+    font-family: 'Roboto';
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.owner {
+  text-align: center;
+  font-size: 23px;
+  margin-top: 30px;
+  font-family: 'Roboto';
+}
+
+
+.developer {
+  font-family: 'Roboto';
+}
+
+.link {
+  font-size: 14px;
+  text-align: center;
+}
+
+.link a {
+  color: rgb(104, 104, 212);
+}
+
+.getintouch {
+  display: flex;
+}
+
+.login img {
+  width: 40rem;
+}
+
+.btn {
+  padding: 10px 20px;
+}
+
+.error {
+  /* border: 2px solid red; */
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 12px;
+  color: rgba(255, 0, 0, 0.507);
+  font-family: "Roboto";
+}
+
+.informations {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.datas {
+  /* border: 2px solid black; */
+  margin-top: 20px;
+  width: fit-content;
+  background-color: rgb(234, 234, 234);
+  padding: 15px 40px;
+  border-radius: 20px;
+}
+
+.owner span {
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 1224px) {
+
+  form {
+      width: 90%;
+  }    
+
+
+}
+
+@media screen and (max-width: 1000px) {
+
+  .owner {
+    font-size: 23px;
+    font-weight: bold;
+  }
+
+
+}
+
+@media screen and (max-width: 1170px) {
+
+  .getintouch {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .login img {
+    width: 15rem;
+    text-align: center;
+    /* border: 2px solid red; */
+  }
+
 }
