--- a/src/home.css
+++ b/src/home.css
@@ -1,7 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+
+.home{
+  background-color: #363636;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dashboard{
+  
+  width: 65%;
+  height: 83vh;
+  border-radius: 30px;
+  background-color: #151515;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sidebar{
+  color: white;
+  background-color: #242424;
+  height: 100%;
+  width: 20%;
+  border-radius: 30px;
+  font-family: 'Oswald', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.btn{
+  color: white;
+  background-color: transparent;
+  font-family: 'Oswald', sans-serif;
+  padding: 10px 15px 10px 15px;
+}
+button:hover{
+  cursor: pointer;
+}
+.third{
+  color: white;
+  background-color: #242424;
+  height: 95%;
+  width: 30%;
+  border-radius: 30px;
+  font-family: 'Oswald', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  margin-right: 30px;
+}
+.third_first{
+  font-size: 75px;
+}
+.third_second{
+  width: 90%;
+  height: 25%;
+  background-color: #363636;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .cover {
     /* border: 2px solid yellow; */
+
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -24,23 +96,61 @@
   .coverDetails h2 {
     font-size: 70px;
   }
-  
+  .second{
+    height: 100%;
+    width: 50%;
+
+  }
+  .profile{
+    background-color: aliceblue;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+  }
+  .namebar{
+    color: white;
+    width: 100%;
+    height: 10%;
+    padding-left: 30px;
+    padding-right: 20px;
+    display: flex;
+    font-family: 'Oswald', sans-serif;
+    align-items: center;
+    justify-content: space-between;
+  }
   .cards {
+    padding-left: 30px;
+    align-items: center;
+    justify-content: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr ;
+    margin-top: 15px;
     /* border: 2px solid hotpink; */
-    width: 80%;
-    margin: auto;
-    margin-bottom: 50px;
+    /* width: 80%; */
+    /* margin: auto; */
+    /* height: 100%; */
+ 
+    /* background-color: aqua; */
+    /* padding: 20px ,30px,20px,30px; */
+    /* width: 50%; */
 
   }
   
   .card {
-    grid-template-columns: 1fr 1fr;
-    width: fit-content;
-    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* grid-template-columns: 1fr 1fr; */
+    width: 250px;
+    
+    /* width: fit-content; */
+    /* background-color: #C0DEDD; */
+    background-color: #F1DFDE;
     color: #000;
-    padding: 10px 80px;
+    /* padding: 10px 80px; */
     border-radius: 20px;
     transition: all 0.1s ease-in;
     cursor: pointer;
@@ -52,13 +162,13 @@
   }
   
   .card img {
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
   }
   
   .card h4 {
     text-align: center;
-    font-size: 18px;
+    font-size: 13px;
     font-family: 'Oswald', sans-serif;
 
   }
@@ -68,6 +178,13 @@
   }
 
   @media screen and (max-width: 1220px) {
+   
+    .third{
+      display: none;
+    }
+    .second{
+      width: 80%;
+    }
 
     .cards {
       grid-template-columns: 1fr 1fr;
@@ -151,7 +268,7 @@
     }
 
     .card {
-      width: 300px;
+     
       height: fit-content;
       text-align: center;
       padding: 10px 20px;
