--- a/src/index.css
+++ b/src/index.css
@@ -226,11 +226,14 @@ a {
 
 
 }
-@media only screen and (max-width: 1224px) {
+@media screen and (max-width: 1220px) {
 
   form {
       width: 90%;
   }    
+  .getintouch{
+    width: 80%;
+  }
 
 
 }
@@ -244,18 +247,13 @@ a {
 
 
 }
+@media screen and (max-height: 900px) {
+  form label {
+    margin-bottom: 1px;
+}
+form input{
+  margin-bottom: 4px;
+}
 
-@media screen and (max-width: 1170px) {
-
-  .getintouch {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .login img {
-    width: 15rem;
-    text-align: center;
-    /* border: 2px solid red; */
-  }
 
 }
