--- a/src/home.css
+++ b/src/home.css
@@ -71,31 +71,6 @@ button:hover{
   justify-content: center;
 }
 
-.cover {
-    /* border: 2px solid yellow; */
-
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-    font-family: 'Poppins', sans-serif;
-    
-  }
-  
-  .cover img {
-    width: 30rem;
-  }
-  
-  .coverDetails {
-    /* border: 2px solid lawngreen; */
-    padding: 20px;
-    margin-left: 80px;
-  }
-  
-  .coverDetails h2 {
-    font-size: 70px;
-  }
   .second{
     height: 100%;
     width: 50%;
@@ -125,15 +100,6 @@ button:hover{
     display: grid;
     grid-template-columns: 1fr 1fr ;
     margin-top: 15px;
-    /* border: 2px solid hotpink; */
-    /* width: 80%; */
-    /* margin: auto; */
-    /* height: 100%; */
- 
-    /* background-color: aqua; */
-    /* padding: 20px ,30px,20px,30px; */
-    /* width: 50%; */
-
   }
   
   .card {
@@ -143,14 +109,9 @@ button:hover{
     align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
-    /* grid-template-columns: 1fr 1fr; */
     width: 250px;
-    
-    /* width: fit-content; */
-    /* background-color: #C0DEDD; */
     background-color: #F1DFDE;
     color: #000;
-    /* padding: 10px 80px; */
     border-radius: 20px;
     transition: all 0.1s ease-in;
     cursor: pointer;
@@ -158,14 +119,12 @@ button:hover{
     box-shadow: 1px 3px 14px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 1px 3px 14px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 3px 14px 0px rgba(0,0,0,0.75);
-
   }
   
   .card img {
     width: 100px;
     height: 100px;
   }
-  
   .card h4 {
     text-align: center;
     font-size: 13px;
@@ -175,6 +134,10 @@ button:hover{
   
   .card:hover {
     transform: scale(1.03);
+  }
+  .overflow{
+    overflow: scroll;
+    width: 100%;
   }
 
   @media screen and (max-width: 1220px) {
